updated to run handles before webpage check

--- a/webserver.yml
+++ b/webserver.yml
@@ -141,6 +141,8 @@
       group: root
       mode: '0744'
       backup: no
+  - meta: flush_handlers
+
   - name: Checking webpage
     block:
       - uri:
