adding asserts to roles and removing default readme

--- a/webserver-firewall/tasks/main.yml
+++ b/webserver-firewall/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 # tasks file for webserver-firewall
+- assert: { that: "ansible_os_family == 'Debian'" }
 - name: Allow localhost INPUT
   iptables:
     chain: INPUT
