added flush-handler and explination to parts of task

--- a/check_https/tasks/main.yml
+++ b/check_https/tasks/main.yml
@@ -1,5 +1,7 @@
 ---
 # tasks file for check_https
+- name: firing any pending service restarts
+  meta: flush_handlers
 - assert: { that: "ansible_os_family == 'Debian'" }
 - name: Checking webpage
   block:
